[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
"actix-web" = { version = "4.9.0" }
"serde_json" = { version = "1.0.138" }
"serde" = { version = "1.0.217", features = ["derive"] }
"itertools" = { version = "0.14.0" }
"actix-service" = "2.0.2"
"futures" = "0.3.31"
"actix-cors" = "0.7.0"
"diesel" = { version = "2.2.7", features = ["postgres", "chrono", "r2d2"] }
"chrono" = "0.4.39"
"yaml-rust2" = "0.10.0"
"lazy_static" = "1.5.0"
