[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
"actix-web" = { version = "4.9.0" }
"serde_json" = { version = "1.0.138" }
"serde" = { version = "1.0.217", features = ["derive"] }
"itertools" = { version = "0.14.0" }
"actix-service" = "2.0.2"
"futures" = "0.3.31"
"actix-cors" = "0.7.0"
"diesel" = { version = "2.2.7", features = ["postgres", "chrono", "r2d2"] }
"chrono" = { version = "0.4.39", features = ["serde"] }
"serde_yaml" = "0.9.34+deprecated"
"lazy_static" = "1.5.0"
"bcrypt" = "0.17.0"
"uuid" = { version = "1.13.1", features = ["serde", "v4"] }
jsonwebtoken = "9.3.1"
